tests/pass/0096_single_parameter_argument.ee
fn identity(x) {
    return x;
}

fn main() {
    print(identity(7));
}
