tests/fail/0057_malformed_parameters.ee
fn main(int a, b) {
  print(a);
}
